<resources>
    <string name="app_name">Clima</string>
    <string name="texto_grados">23°</string>
    <string name="texto_ciudad">Felipe Carrillo Puerto</string>
    <string name="texto_estatus">Nublado</string>

    <string name="texto_bienvenida">
        Bienvenido a mi app del clima, para poder ver una ciudad selecciona
    la opción de abajo.
    </string>    <string name="texto_boton_fcp">Clima de la ciudad de Felipe Carrillo Puerto</string>
    <string name="texto_boton_tulum">Clima de la ciudad de Tulum</string>
    <string name="texto_boton_cancun">Clima de la ciudad de Cancún</string>
    <string name="texto_boton_cozumel">Clima de la ciudad de Cozumel</string>
</resources>